<resources>
    <string name="app_name">AppBallDontLie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_maps">Map</string>
    <string name="descri_es_dos_jogos">Descrições dos Jogos</string>
    <string name="times_de_casa">Times de Casa</string>
    <string name="times_visitantes">Times Visitantes</string>
    <string name="resultados_dos_jogos">Resultados dos Jogos</string>
    <string name="times_ganhadores">Times Ganhadores</string>
    <string name="in_cio">Início</string>
    <string name="api_balldontlie">API BallDontLie</string>
    <string name="seja_bem_vindo_a">Seja Bem Vindo(a)</string>
</resources>